--- a/wiki/Planning.wiki
+++ b/wiki/Planning.wiki
@@ -83,11 +83,11 @@ richting waarin een Hovercraft zou moeten bewegen aan te duiden (depends on WP 6
     * WP 8.5: Visualizatie achterstand op eerste + achterstand op vorige racer bij passeren checkpoint (depends on WP 1.10).
     * WP 8.6: Visualizatie rankings voorgaande en volgende spelers als live 3D model (depends on WP 7.3, WP 1.7).
 
-   * WP 10: Finalizing
+   * WP 10 (iedereen): Finalizatie
     * WP 10.1: Code review 
     * WP 10.2: Gameplay testing
     * WP 10.3: Verpakking + installer.
-    * WP 10.4: TODO
+    * WP 10.4: Schrijven eindverslag.
 
   
  
