--- a/wiki/Planning.wiki
+++ b/wiki/Planning.wiki
@@ -67,7 +67,7 @@ Ik ga deze planning nog sterk uitbreiden en een gantt-chart maken ervoor zodat d
     * WP 6.4: Ontvangen Havok events die potentiele collisions aangeeft, waardoor collision avoidance kan uitgevoerd worden.
     * WP 6.5: Bijkomend op collision avoidance, implementatie path planning die meer op voorhand gaat plannen dan voor collision avoidance (optioneel).
     * WP 6.6: Gebruik maken van kennis entiteiten (boost, jump, ...) om nog optimalere resultaten te behalen (optioneel) (depends on WP 5.3.4 voor minstens 1 map).
-    * WP 6.7: Agressiveness of emotional state gebruiken om AI meer random en spelafhankelijk gedrag te geven (depends on WP 1.9).
+    * WP 6.7: Agressiveness of emotional state gebruiken om AI meer random en spelafhankelijk gedrag te geven (optioneel) (depends on WP 1.9).
 
    * WP 7 (Kristof + PJ): Rendering
      * WP 7.1: Implementation shaders.
