Edited wiki page through web user interface.

--- a/wiki/Installer.wiki
+++ b/wiki/Installer.wiki
@@ -1,5 +1,3 @@
-#summary One-sentence summary of this page.
-
 = INNO Setup Script =
 
 Ik heb een INNO Setup Script gemaakt in de root van het project ("setup.iss"), zodat HovUni gemakkelijk te testen is op andere computers, zonder dat daarvoor heel het project moet worden gecheckout.
@@ -10,4 +8,4 @@ En het is ook meteen handig voor het einde van het project, aangezien we al een 
   # Download en installer [http://www.jrsoftware.org/download.php/is.exe INNO Setup Compiler]
   # Rechtsklik op _setup.iss_ en kies "Compile". De installer (_setup.exe_) zal dan in bin/installer worden gezet.
 
-_NB_: Voor elke (nieuwe) file die nodig is voor het project moet er een entry staan in het script.
+_NB_: Voor elke (nieuwe) file in de data folder die nodig is voor het programma moet er een entry staan in het INNO script.
