--- a/wiki/Planning.wiki
+++ b/wiki/Planning.wiki
@@ -12,9 +12,9 @@ Aangezien ik niet per se een standaard heb gevolgd voor de planning. Hierbij enk
 
   * WP 1 (Nick + Olivier + in aan later stadium andere mensen): Ontwikkeling race state en general gameplay.
     * WP 1.1: *(DONE)* Hernoemen Player naar PlayerSettings
-    * WP 1.2: Ontwikkeling RaceState object dat gesynchronizeerd wordt over alle deelnemers binnen een lobby. 
-    * WP 1.3: Implementatie RacePlayer object met PlayerSettings (ontvangen door Lobby) en Positie. 
-    * WP 1.4: RaceState creeert voor alle deelnemers in de Lobby een RacePlayer object, wat wordt gesynchronizeerd over alle deelnemers. 
+    * WP 1.2: *(DONE)* Ontwikkeling RaceState object dat gesynchronizeerd wordt over alle deelnemers binnen een lobby. 
+    * WP 1.3: *(DONE)* Implementatie RacePlayer object met PlayerSettings (ontvangen door Lobby) en Positie. 
+    * WP 1.4: *(DONE)* RaceState creeert voor alle deelnemers in de Lobby een RacePlayer object, wat wordt gesynchronizeerd over alle deelnemers. 
     * WP 1.5: Visualizatie alle deelnemers in plaats van enkel diegene die controle heeft over het keyboard. Hierbij hoort het inlezen van de starting posities van de wereldbeschrijving en het plaatsen van de hovercrafts op hun posities (depends on 5.3.3 voor minstens 1 map).
     * WP 1.6: Implementatie staten binnen de race state (count down, racing, finished, ...). 
     * WP 1.7: Events triggeren naar clients als gevolg van de staten (tonen nummers bij count down, tonen ranking bij finish, ...).
