--- a/wiki/Installer.wiki
+++ b/wiki/Installer.wiki
@@ -5,7 +5,9 @@ Ik heb een INNO Setup Script gemaakt in de root van het project ("setup.iss"), z
 En het is ook meteen handig voor het einde van het project, aangezien we al een installer hebben. 
 
 == Howto ==
-  # Download en installer [http://www.jrsoftware.org/download.php/is.exe INNO Setup Compiler]
+  # Build de solution in "Release" modus.
+  # Download en installeer [http://www.jrsoftware.org/download.php/is.exe INNO Setup Compiler]
   # Rechtsklik op _setup.iss_ en kies "Compile". De installer (_setup.exe_) zal dan in bin/installer worden gezet.
+
 
 _NB_: Voor elke (nieuwe) file in de data folder die nodig is voor het programma moet er een entry staan in het INNO script.
