--- a/wiki/Planning.wiki
+++ b/wiki/Planning.wiki
@@ -57,10 +57,10 @@ Aangezien ik niet per se een standaard heb gevolgd voor de planning. Hierbij enk
     * WP 5.5: Toekennen sounds aan events.
    
    * WP 6 (Dirk): artificial intelligence
-    * WP 6.1: Implementatie path finding algoritmen in generieke context via AIControllers.
+    * WP 6.1: *(DONE)* Implementatie path finding algoritmen in generieke context via AIControllers.
     * WP 6.2: Volgen path gedefinieerd door map path (depends on WP 5.3.4 voor minstens 1 map).
     * WP 6.3: Implementatie aanwezigheid bots in server met meerdere characters (depends on  WP 1.5).
-    * WP 6.4: Ontvangen Havok events die potentiele collisions aangeeft, waardoor collision avoidance kan uitgevoerd worden.
+    * WP 6.4: *(DONE)* Ontvangen Havok events die potentiele collisions aangeeft, waardoor collision avoidance kan uitgevoerd worden.
     * WP 6.5: Bijkomend op collision avoidance, implementatie path planning die meer op voorhand gaat plannen dan voor collision avoidance (optioneel).
     * WP 6.6: Gebruik maken van kennis entiteiten (boost, jump, ...) om nog optimalere resultaten te behalen (optioneel) (depends on WP 5.3.4 voor minstens 1 map).
     * WP 6.7: Agressiveness of emotional state gebruiken om AI meer random en spelafhankelijk gedrag te geven (optioneel) (depends on WP 1.9).
