Nieuwe feature --> laden in aparte thread

--- a/wiki/CoolPossibleFeatures.wiki
+++ b/wiki/CoolPossibleFeatures.wiki
@@ -10,6 +10,7 @@ Plaats hier alle features die in je op komen die mogelijk in het spel terecht ku
   * Connect as observer --> mogelijkheid om eender wie te volgen (Nick)
   * Find lan games (Olivier)
   * Als ge nu een meer generiek hindernisseparcours maakt, kunde buite, binne, cylinder, dunne oppervlaktes make, kunde aan koorden slingeren om naar een andere hindernis te gaan (Kristof)
+  * Move loading of objects to a thread to fix loading screen (Nick)
 
 == Observer ==
 Je kan dus als observer een spel joinen zodat je gewoon je camera achter eender wie kan plaatsen. Dit zou wel handig kunnen zijn voor de finale presentatie en lijkt met niet echt moeilijk?
