--- a/trunk/doc/verslag/verslag-hovercraftuniverse.tex
+++ b/trunk/doc/verslag/verslag-hovercraftuniverse.tex
@@ -1,5 +1,10 @@
  \documentclass[a4paper]{article}
 
+%NOTE BY DIRK: 	Gelieve paragrafen gewoon in te typen, geen \par gedoe.
+%								Citaties liefst in de vorm "author:1999" met author=achternaam van de eerste auteur
+%								figuren, tabellen, listings, ... met prefixen: fig, tab, lst, ...
+
+
 \author{Olivier Berghmans, Nick De Frangh, Dirk Delahaye,\\Kristof Overdulve, Pieter-Jan Pintens, Tobias Van Bladel}
 \title{Architectuur en Algoritmen van Computer Games\\\textbf{Hovercraft Universe}\\\small{\url{http://uhasseltaacgua.googlecode.com/}}}
 \pagestyle{plain}
@@ -67,6 +72,8 @@ Voor de visuele representatie op de clients heeft elke relevante entiteit een \v
 	\label{fig:netwerkfreq}
 \end{figure}
 
+\subsection{Besturing}
+
 
 \subsection{Netwerkstructuur}
 \begin{figure}
@@ -77,7 +84,14 @@ Voor de visuele representatie op de clients heeft elke relevante entiteit een \v
 \end{figure}
 \todo{Over ZoidCom en het repliceren van data over het netwerk.}
 
-\subsection{Rolverdeling en verantwoordelijkheden}
+\subsection{Scritping en AI}
+Voor de bots is een AI voorzien, die ``menselijk'' stuurgedrag nabootst. De algoritmen van deze AI zijn gebaseerd op de autonome stuursimulaties van Craig Reynolds \cite{reynolds:1999}. De huidige AI is in staat om een voorgedefinieerd pad te volgen binnen een bepaalde marge (``Path Following''). Een pad wordt voorgesteld als een \emph{multiline}: een lijst van punten in de wereld, telkens geassocieerd met een straal (\verb|radius|). De straal op punt $x_i$ stelt de \emph{breedte} van het pad voor tussen punt $x_i$ e, $x_{i+1}$. Deze paden worden opgeslagen in aparte bestanden. Dit betekent dat de level designers per map een ideaal pad (of meerdere paden) voor de AI kunnen aanmaken. 
+
+Deze AI is geprogrammeerd in Lua \cite{lerusalimschy:2006}, om aanpassing van de AI-algoritmen mogelijk te maken zonder dat het spel hiervoor gehercompileerd moet worden. Voor de binding tussen Lua en C++ wordt Luabind gebruikt. De \verb|ScriptWrapper| klasse abstraheert deze scripts en laat de programmeurs toe om met de scripts te werken, zonder Lua-specifieke constructies te moeten gebruiken.
+
+\todo{collision avoidance}
+
+\section{Rolverdeling en verantwoordelijkheden}
 \todo{Of niet? :D}
 
 \bibliographystyle{plain}
